--- a/WebServer/WebServer/packages.config
+++ b/WebServer/WebServer/packages.config
@@ -2,8 +2,8 @@
 <packages>
   <package id="nanoFramework.CoreLibrary" version="1.14.2" targetFramework="netnano1.0" />
   <package id="nanoFramework.DependencyInjection" version="1.0.22" targetFramework="netnano1.0" />
-  <package id="nanoFramework.Hosting" version="1.0.25" targetFramework="netnano1.0" />
   <package id="nanoFramework.Json" version="2.2.99" targetFramework="netnano1.0" />
+  <package id="nanoFramework.ResourceManager" version="1.2.13" targetFramework="netnano1.0" />
   <package id="nanoFramework.Runtime.Events" version="1.11.6" targetFramework="netnano1.0" />
   <package id="nanoFramework.System.Collections" version="1.5.18" targetFramework="netnano1.0" />
   <package id="nanoFramework.System.Device.Gpio" version="1.1.28" targetFramework="netnano1.0" />
